# power-query-lint-vs-code-extension

./: .eslintrc.json  .gitignore  .vscodeignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PQL-TEST.md  README.md  agent.md  mcp.json  package-lock.json  package.json  tsconfig.json  vsc-extension-quickstart.md
.github/skills/: SKILLS.md
.github/workflows/: promptfoo-eval.yml
examples/: SampleModel.pbip  sample.pq
examples/SampleModel.Report/: .platform  definition.pbir
examples/SampleModel.Report/.pbi/: localSettings.json
examples/SampleModel.Report/definition/: report.json
examples/SampleModel.SemanticModel/: .platform  diagramLayout.json
examples/SampleModel.SemanticModel/.pbi/: cache.abf  localSettings.json
examples/SampleModel.SemanticModel/DAXQueries/: BestPractices.ANY.Tests.dax  (+3 more)
examples/samplemodel/: samplemodel.pbip
python/: .env.example  pql_test_cli.py  pql_test_runner.py  pyproject.toml  requirements-dev.txt  requirements.txt
python/tests/: __init__.py  conftest.py  test_pql_test_cli.py  test_pql_test_runner.py
resources/agents/: power-query-lint.agent.md  power-query-linter.md  power-query-tester.md  power-query-tester.sudo.md
scripts/: check-prereqs.js
skills/dax-query-guidelines/: SKILL.md
skills/fab-inspector/: SKILL.md
skills/json-logic/: SKILL.md
skills/pbir-report-authoring/: SKILL.md
skills/pql-assert/: SKILL.md
src/: cli.ts  extension.ts  mcp-server.ts  pql-test-runner.ts
src/test/: cli.test.ts  pql-test-runner.test.ts
tests/promptfoo/: README.md  prompt-function.js  promptfooconfig.yaml  test-cases.csv
(+38 files in other folders)
